test/kind/wrong/type1.kk.out
test/kind/wrong/type1.kk(6,20): error: Invalid type
 type context : list<id>
 type : id
 inferred kind: V -> V
 expected kind: V