test/kind/wrong/type1.kk
type list<a> {
  con Single( head: a)
}

alias id<a> = a
alias wrong = list<id>
